add more code to make fully functional

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <h1>Event List</h1>
-      <ul id="event-list"></ul>
+      <ol id="event-list"></ol>
 
 
     <h2>Add a New Event</h2>
